ghc-4335c07/testsuite/tests/typecheck/should_fail/T11356.hs
module T11356 where

class T p p => C p

type T x = C x

