ghc-4335c07/testsuite/tests/typecheck/should_fail/T11356.stderr

T11356.hs:3:7: error:
    • Expected kind ‘k0 -> Constraint’, but ‘T p’ has kind ‘Constraint’
    • In the class declaration for ‘C’
